# python_dev_uv

./: Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/src/content/: index.md
notebooks/: straw_breaks_camel_back.ipynb
src/dagster_home/: dagster.yaml  workspace.yaml
src/dbt/models/marts/: daily_sales.sql
src/pipelines/assets/: basic_pipeline.py
src/scripts/: init_db.py
tests/unit/: test_basic_pipeline.py
