[project]
name = "python_dev_uv"
version = "0.1.0"
description = "Data Engineering Development Environment with Dagster, dbt, and DuckDB"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "dagster>=1.5.13",
    "dagster-webserver>=1.5.13",
    "dbt-core>=1.7.4",
    "dbt-duckdb>=1.7.1",
    "duckdb>=0.9.2",
    "jupyter>=1.0.0",
    "pandas>=2.2.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "matplotlib",
    "seaborn>=0.13.2",
    "scikit-learn>=1.5.2",
]
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.ruff]
line-length = 88
target-version = "py39" 
